--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
